Logout issue fixed, roles implemented, other changes implemented